# zeus

./: .gitignore  README.md  requirements.txt  setup.cfg
src/: citizenscale.py  fisnar.py  snapmaker.py  zeus.py
tests/: demo.py  qsi-test-reset.py  qsi-test-setup.py  qsi-test.py  robot-test.py  scale-test.py
