[metadata]
name = zeus
version = 0.1.0
description = 'Open source Python API for Hamilton Pipette Head'
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
include_package_data = True
zip_safe = True
python_requires = >=3.8, <4
install_requires=
    python-can >= 2.13.0
    colorama >= 0.4.6    
package_dir =
    =src
packages = find_namespace:

[options.package_data]
* =**/*

[options.packages.find]
where = src
exclude = 
	tests
	tests.*
